<resources>
    <string name="app_name">Glic</string>
    <string name="app_id">382658412434</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Entrar</string>

    <!-- Strings related to login -->
    <string name="title_activity_principal">Principal</string>
    <string name="title_activity_register_data">Registrar</string>
    <string name="system_config_file_key">br.tcc.glic.SYSTEM_CONFIG_FILE</string>
    <string name="app_configured_config">app_configured_config</string>
    <string name="login_error">Não foi possível fazer login</string>
    <string name="google_api_connect_error">Parece que você está sem internet. As conquistas não serão desbloqueadas até que você se conecte novamente.</string>
    <string name="what_is_your_treatment_type">Qual o seu tipo de tratamento?</string>
    <string name="conventional_treatment">Convencional</string>
    <string name="intensive_treatment">Intensivo</string>
    <string name="continue_configuration">Continuar</string>
    <string name="conventional_treatment_explanation">1 ou 2 doses de insulina por dia</string>
    <string name="intensive_treatment_explanation">Ao menos 3 doses de insulina por dia ou uso de bomba de insulina</string>
    <string name="therapy_type_config">tipo_terapia_config</string>
    <string name="age_config">age_config</string>
    <string name="what_is_your_age">Qual a sua idade?</string>
    <string name="save">Salvar</string>
    <string name="years_old">anos</string>
    <string name="min_pre_glycemia_config">min_pre_glycemia_config</string>
    <string name="max_pre_glycemia_config">max_pre_glycemia_config</string>
    <string name="min_pos_glycemia_config">min_pos_glycemia_config</string>
    <string name="max_pos_glycemia_config">max_pos_glycemia_config</string>
    <string name="fields_to_show_config">fields_to_show_config</string>
    <string name="title_activity_settings">Configurações</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Geral</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>


    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notificações</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="fields_to_show_by_default">Campos a serem mostrados por padrão</string>
    <string name="glycemic_objectives_premeal">Objetivos Glicêmicos - Pré Prandial</string>
    <string name="glycemic_objectives_pos_prandial">Objetivos Glicêmicos - Pós Prandial</string>
    <string name="Maximum">Máximo</string>
    <string name="Minimum">Mínimo</string>
    <string name="ingested_carbohydrates">Carboidratos Ingeridos</string>
    <string name="glycemia">Glicemia</string>
    <string name="hba1c">HbA1c</string>
    <string name="injected_insulin">Insulina Aplicada</string>
    <string name="now">Agora</string>
    <string name="result_saved">Salvo</string>
    <string name="calendar_bundle_argument">calendar_bundle_argument</string>
    <string name="logout_title">Sair</string>
    <string name="logout_key">logout_key</string>
    <string name="insulin_types">Tipos de Insulina</string>
    <string name="date_time_picker_type_argument">date_time_picker_type_argument</string>
    <string name="show_date_bundle_argument">show_date_bundle_argument</string>
    <string name="add_field">Adicionar</string>
    <string name="glycemia_variation_symbol">↑↓</string>
    <string name="day">dia</string>
    <string name="week">semana</string>
    <string name="month">mês</string>
    <string name="estimated_average_glycemia">Glicemia Média Estimada</string>
    <string name="your_estimated_average_glycemia_is">Sua Glicemia Média Estimada de acordo com a última hemoglobina glicada registrada é</string>
    <string name="entry_bundle_argument">entry_bundle_argument</string>
    <string name="apply_changes">Aplicar</string>
    <string name="cancel">Cancelar</string>
    <string name="delete">Excluir</string>
    <string name="are_you_sure_delete">Você tem certeza de que deseja excluir este registro?</string>
    <string name="yes">Sim</string>
    <string name="invalid_entry_type">Tipo de registro não reconhecido</string>
    <string name="reminder_service_notify_extra">reminder_service_notify</string>
    <string name="reminder_notification_title">Você não devia ter feito o teste?</string>
    <string name="reminder_notification_text">Você geralmente faz um registro às %s</string>
    <string name="reminder_time_extra">reminder_time_extra</string>
    <string name="reminder_notification_big_text">Você geralmente faz um registro às %s, achei melhor lembrar (•‿•)</string>
    <string name="activate_notifications_config">activate_notifications_config</string>
    <string name="activate_notifications_config_text">Ativar lembretes de registro</string>
    <string name="registered_entries_argument">registered_entries_argument</string>
    <string name="self_evaluation_config">auto_avaliation_config</string>
    <string name="how_is_your_glicemia">Como está a seu exame?</string>
    <string name="self_evaluation">Auto-avaliação</string>
    <string name="self_evaluation_congrats_title">Parabéns, você acertou!</string>
    <string name="self_evaluation_congrats_text">Você respondeu que seu exame está %s e está certo! Parece que você já sabe algumas coisas sobre diabetes.\n\nParabéns!</string>
    <string name="self_evaluation_wrong_answer_title">Resposta errada</string>
    <string name="self_evaluation_wrong_answer_text">Parece que você respondeu errado... Seu exame, na verdade, está \"%1$s\", você respondeu \"%2$s\".\n\nMenor que %3$s = Baixo\nEntre %3$s e %4$s = Bom\nAcima de %4$s = Alto</string>
    <string name="correct_self_evaluation_answers_config">correct_self_evaluation_answers_config</string>
    <string name="self_evaluation_desactivation">Você já respondeu corretamente várias vezes!\n\nAcho que não preciso mais te perguntar. Vou desativar a auto-avaliação.\n\nSe quiser ativar novamente, basta ir nas configurações.</string>
    <string name="self_evaluation_user_config">auto_avaliation_user_config</string>
    <string name="activate_self_evaluation_text">Ativar auto-avaliação</string>
    <string name="glycemia_and_carbohydrates_by_hour">Glicemias e Carboidratos Ingeridos por horário</string>
    <string name="chart_glycemia_description">Médias Glicêmicas por Dia</string>
    <string name="glycemias_average">Média de Glicemias</string>
    <string name="carbohydrates_average">Média de Carboidratos Ingeridos</string>
    <string name="variability">Variabilidade</string>
    <string name="chart_glycemia_and_carbohydrate_by_hour_description">Média de Glicemias e Carboidratos Ingeridos por Hora do Dia</string>
    <string name="chart_carbohydrates_description">Média de Carboidratos Ingeridos por Dia</string>
    <string name="reminders_unlocked_config">reminders_unlocked_config</string>
    <string name="reminder_notification_activation_title">Ativação de Notificações</string>
    <string name="reminder_notification_activation_text">Parabéns! Você desbloqueou os \"Lembretes de Registro\".\n\nEu acho que aprendi quais são os horários que você geralmente faz registros e vou tentar te lembrar se você esquecer, OK?\n\nVocê pode desativar este recurso nas configurações.</string>
    <string name="score_config">score_config</string>
    <string name="mandatory_field_message_title">Campo Obrigatório</string>
    <string name="mandatory_age_configuration_message">Por favor, informe a sua idade.</string>
    <string name="mandatory_glycemia_message">Informe o valor da sua glicemia.</string>
    <string name="character_config">character_config</string>
    <string name="select_your_glic">Escolha o seu Glic</string>
    <string name="character_type_config">character_type_config</string>
    <string name="alpha_character_name">Alfa</string>
    <string name="beta_character_name">Beta</string>
    <string name="gama_character_name">Gama</string>
    <string name="indicators_argument">indicators_argument</string>
    <string name="character_state_argument">character_state_argument</string>
    <string name="character_state_title">Eu estou %s pois...</string>
    <string name="but">Mas...</string>
    <string name="character_state_indication">Sua %1$s está %2$s</string>
    <string name="perfect_character_state_improvement">Parabéns! Todos os seus indicadores estão bons, continue assim!</string>
    <string name="how_to_improve_character_state">Melhore pelo menos %s indicador(es) para que eu fique melhor.</string>
    <string name="level">nível</string>
    <string name="lvl_config">lvl_config</string>
    <string name="lvl_up_title">Você subiu de nível!</string>
    <string name="lvl_up_text">Parabéns! Parece que você esta registrando tudo certinho!</string>
    <string name="evolution_title">Seu Glic está evoluindo...</string>
    <string name="ok">OK</string>
    <string name="character_evolved_title">Seu Glic evoluiu!</string>
    <string name="lvl_up_text_with_evolution_indication">Parabéns! Parece que você esta registrando tudo certinho!\n\nChegue ao nível %s para que seu personagem evolua.\n\nDica: Registre carboidratos ingeridos, insulina aplicada e exames de hemoglobina glicada para ganhar mais pontos.</string>
    <string name="invalid_field_value_message_title">Valor Inválido</string>
    <string name="invalid_glycemia_value_message">O valor da glicemia deve estar entre 20 e 900.</string>
    <string name="invalid_carbohydrate_value_message">A quantidade de carboidratos ingeridos deve estar entre 1 e 999.</string>
    <string name="invalid_hba1c_value_message">O valor da hemoglobina glicada deve estar entre 0.1 e 99.</string>
    <string name="invalid_insulin_value_message">A dose de insulina deve estar entre 0.1 e 999.</string>
    <string name="average_indicator_explanation"><![CDATA[<b>Média:</b> Fornece uma visão geral sobre os seus resultados em um certo período. Os limites são os seguintes:<br/>Menor que %1$s = <font color="%3$s">Baixo</font><br/>Entre %1$s e %2$s = <font color="%4$s">Bom</font><br/>Acima de %2$s = <font color="%5$s">Alto</font><br/><b>Para melhorar, procure manter suas glicemias sempre dentro dos limites.</b>]]></string>
    <string name="variability_indicator_explanation"><b>Variabilidade:</b> Indica o quanto sua glicemia variou no período.\nQuanto menor, melhor, mas deve-se procurar manter a variabilidade abaixo de 1/3 da média glicêmica do mesmo período.\n<b>Para melhorar, procure manter suas glicemias com valores próximos uns dos outros.</b></string>
    <string name="indicators_explanation_argument">indicators_explanation_argument</string>
    <string name="indicators_explanation_title">Indicadores</string>
</resources>
