<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_indicators_explanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/img_indicators_explanation"
            android:layout_marginTop="25dp"
            android:adjustViewBounds="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:id="@+id/txt_average_explanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/average_indicator_explanation"
            style="@style/IndicatorExplanation" />

        <TextView
            android:id="@+id/txt_variability_explanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/variability_indicator_explanation"
            style="@style/IndicatorExplanation" />
        </LinearLayout>
    </ScrollView>
        <Button
            android:id="@+id/btn_dismiss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/ok"/>
    </LinearLayout>
