<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.tcc.glic.fragments.configuration.CharacterConfigurationFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/glic_selection_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_your_glic"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="5dp">
            <br.tcc.glic.views.SpriteView
                android:id="@+id/btn_select_alpha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:autoplay="true"
                app:framesCount="4"
                app:animationSpeed="200"
                app:frameHeight="120dp"
                app:frameWidth="90dp"
                app:sprite="@drawable/sprite_blue_stand" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alpha_character_name"
                android:textColor="@color/colorAlpha"
                style="@style/GlicName"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="bottom"
            android:padding="5dp">
            <br.tcc.glic.views.SpriteView
                android:id="@+id/btn_select_beta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:autoplay="false"
                app:framesCount="4"
                app:animationSpeed="200"
                app:frameHeight="115dp"
                app:frameWidth="90dp"
                app:sprite="@drawable/sprite_yellow_stand" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beta_character_name"
                android:textColor="@color/colorBeta"
                style="@style/GlicName"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="5dp"
            android:gravity="bottom">
            <br.tcc.glic.views.SpriteView
                android:id="@+id/btn_select_gama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:autoplay="false"
                app:framesCount="4"
                app:animationSpeed="200"
                app:frameHeight="100dp"
                app:frameWidth="90dp"
                app:sprite="@drawable/sprite_red_stand" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gama_character_name"
                android:textColor="@color/colorGama"
                style="@style/GlicName" />
        </LinearLayout>
    </LinearLayout>

    <Button android:id="@+id/btn_character_configuration_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/save" />

</RelativeLayout>