<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="br.tcc.glic.fragments.IndicatorsFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/glycemia_indicators_container"
        android:background="@color/colorPrimary">
        <TextView
            android:id="@+id/label_glycemia_indicators"
            android:text="@string/glycemia"
            style="@style/IndicatorsTitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <RelativeLayout
                android:id="@+id/day_glycemia_indicators_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/day_average_glycemia_indicator"
                    android:textSize="30sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:layout_centerInParent="true"
                    android:gravity="center" />

                <ImageView
                    android:id="@+id/img_day_average_glycemia_indicator_quality"
                    android:layout_toRightOf="@id/day_average_glycemia_indicator"
                    style="@style/IndicatorQualityImage" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/week_glycemia_indicators_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/week_average_glycemia_indicator"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:textSize="30sp"
                    android:textColor="@color/colorWhite" />

                <ImageView
                    android:id="@+id/img_week_average_glycemia_indicator_quality"
                    android:layout_toLeftOf="@id/week_average_glycemia_indicator"
                    style="@style/IndicatorQualityImage" />

                <TextView
                    android:id="@+id/week_glycemia_variability_indicator_symbol"
                    android:text="@string/glycemia_variation_symbol"
                    android:layout_toRightOf="@id/week_average_glycemia_indicator"
                    android:layout_alignBaseline="@id/week_average_glycemia_indicator"
                    style="@style/VariabilityIndicator" />

                <TextView
                    android:id="@+id/week_glycemia_variability_indicator"
                    android:layout_toRightOf="@id/week_glycemia_variability_indicator_symbol"
                    android:layout_alignBaseline="@id/week_average_glycemia_indicator"
                    style="@style/VariabilityIndicator" />

                <ImageView
                    android:id="@+id/img_week_glycemia_variability_indicator_quality"
                    android:layout_toRightOf="@id/week_glycemia_variability_indicator"
                    style="@style/IndicatorQualityImage" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/month_glycemia_indicators_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/month_average_glycemia_indicator"
                    android:textSize="30sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:textColor="@color/colorWhite" />

                <ImageView
                    android:id="@+id/img_month_average_glycemia_indicator_quality"
                    android:layout_toLeftOf="@id/month_average_glycemia_indicator"
                    style="@style/IndicatorQualityImage" />

                <TextView
                    android:id="@+id/month_glycemia_variability_indicator_symbol"
                    android:text="@string/glycemia_variation_symbol"
                    android:layout_toRightOf="@id/month_average_glycemia_indicator"
                    android:layout_alignBaseline="@id/month_average_glycemia_indicator"
                    style="@style/VariabilityIndicator" />

                <TextView
                    android:id="@+id/month_glycemia_variability_indicator"
                    android:layout_toRightOf="@id/month_glycemia_variability_indicator_symbol"
                    android:layout_alignBaseline="@id/month_average_glycemia_indicator"
                    style="@style/VariabilityIndicator" />

                <ImageView
                    android:id="@+id/img_month_glycemia_variability_indicator_quality"
                    android:layout_toRightOf="@id/month_glycemia_variability_indicator"
                    style="@style/IndicatorQualityImage" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/day"
                style="@style/IndicatorScope" />

            <TextView
                android:text="@string/week"
                style="@style/IndicatorScope" />

            <TextView
                android:text="@string/month"
                style="@style/IndicatorScope" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/carbohydrates_indicators_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue"
        android:orientation="vertical">
        <TextView
            android:id="@+id/label_carbohydrates_indicators"
            android:text="@string/ingested_carbohydrates"
            style="@style/IndicatorsTitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/day_average_carbohydrates_indicator"
                style="@style/Indicator" />

            <TextView
                android:id="@+id/week_average_carbohydrates_indicator"
                style="@style/Indicator" />

            <TextView
                android:id="@+id/month_average_carbohydrates_indicator"
                style="@style/Indicator" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/day"
                style="@style/IndicatorScope" />

            <TextView
                android:text="@string/week"
                style="@style/IndicatorScope" />

            <TextView
                android:text="@string/month"
                style="@style/IndicatorScope" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
